k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: football-frontend
  ports:
  - port: 5000   
    targetPort: 5000 
    protocol: TCP
